css/style.css
/* CUSTOM PROPERTIES */
:root {
    /* COMMON */
    --avatar-container: 80px;

    /* COL LEFT */
    --header-left-height: 80px;

    /* COL RIGHT */
    --header-right-height: 80px;
    --footer-right-height: 80px;
}

/* RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img {
    max-width: 100%;
}

/* COMMON */
.flex {
    display: flex;
}

.avatar-container {
    width: var(--avatar-container);
    padding: 10px;
}

.circle-avatar {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    object-fit: cover;
}

ul {
    list-style-type: none;
}

button {
    border: none;
    background-color: transparent;
}

.list-icon {
    color: gray;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 25px;
}

.icon {
    font-size: 25px;
    color: rgb(177 177 177);
}

/* BODY */
body {
    width: 100%;
    height: 100vh;
    padding: 20px 80px;
    /* Debug */
    background-color: brown;
}

@media screen and (max-width: 768px) {
    body {
        padding: 0;
    }   
}

/* LAYOUT */
.wrapper {
    width: 100%;
    height: 100%;
    background-image: url(../img/mine.jpg);
}

/* Main col LEFT SECTION ----------------------------------------- LEFT*/
.main-col-left {
    width: 35%;
    height: 100%;
    overflow-y: auto;
    /* Debug */
    background-color: gray; 
}

/* Header LEFT */
.header-left {
    height: var(--header-left-height);
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(234 234 234);
}

.nav-icon {
    margin-right: 20px;
}

/* Main LEFT */
.main-left {
    height: calc(100% - var(--header-left-height));
    /* Debug */
    background-color: aqua;
}

/* Main col RIGHT SECTION ---------------------------------------- RIGHT*/
.main-col-right {
    width: 65%;
    height: 100%;
    overflow-y: auto;
    /* Deug */
    background-color: blue;
}

/* Header RIGHT */
.header-right {
    height: var(--header-right-height);
    /* Debug */
    background-color: gray;
}

/* Main RIGHT */
.main-right {
    height: calc(100% - (var(--header-right-height) + var(--footer-right-height)));
}

/* Footer RIGHT */
.footer-right {
    height: var(--footer-right-height);
    /* Debug */
    background-color: lightslategray;
}

/* Tablet Layout ----------------------------------------------- TABLET*/
@media screen and (max-width: 768px) {
    .main-col-left {
        width: var(--avatar-container);
    }

    .header-left .nav-icon {
        display: none;
    }

    .main-col-right {
        width: calc(100% - var(--avatar-container));
    }
}

/* Mobile Layout ------------------------------------------------- MOBILE*/
@media screen and (max-width: 425px) {
    .main-col-left {
        display: none;
    }

    .main-col-right {
        width: 100%;
    }
}

